--- a/src/test-website/index.html
+++ b/src/test-website/index.html
@@ -103,7 +103,7 @@
         /* PDF Controls */
         #pdf-controls {
             position: fixed;
-            top: 10px;
+            top: 30%;
             left: 10px;
             z-index: 3000;
             background: rgba(255, 255, 255, 0.95);
