increase rectangle and font size

--- a/src/test-website/index.html
+++ b/src/test-website/index.html
@@ -174,11 +174,11 @@
         }
 
         .word {
-            font-size: 28px;
+            font-size: 56px; /* Much larger for readability */
             font-weight: 400;
             color: #7a8599;
             letter-spacing: 0.03em;
-            padding: 4px 8px;
+            padding: 8px 12px;
             border-radius: 6px;
             transition: all 0.15s ease-out;
             cursor: default;
