--- a/src/test-website/index.html
+++ b/src/test-website/index.html
@@ -166,11 +166,13 @@
             box-shadow: 0 8px 40px rgba(0, 0, 0, 0.15);
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start; /* left align text */
             flex-wrap: wrap;
-            gap: 8px;
+            gap: 12px;
             position: relative;
             line-height: 1.8;
+            text-align: left;
+            padding-left: 60px; /* extra left padding for readability */
         }
 
         .word {
