--- a/src/test-website/index.html
+++ b/src/test-website/index.html
@@ -6,6 +6,8 @@
     <title>Focus Reader - ADHD/Dyslexia Friendly</title>
     <!-- PDF.js Viewer CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf_viewer.min.css">
+    <!-- ADHD Gradient for Highlighted Word -->
+    <link rel="stylesheet" href="adhd-gradient.css">
     <!-- Google Fonts - Lexend is dyslexia-friendly -->
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
@@ -158,7 +160,7 @@
 
         #reading-window {
             width: 90%;
-            max-width: 900px;
+            /*max-width: 900px;*/
             min-height: 100px;
             padding: 30px 40px;
             background: #fff;
@@ -187,8 +189,8 @@
         }
 
         .word.highlighted {
-            color: #1a1a2e;
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.2) 0%, rgba(118, 75, 162, 0.2) 100%);
+            background: linear-gradient(90deg, #f9d423 0%, #ff4e50 100%);
+            color: #222;
             font-weight: 500;
             transform: scale(1.05);
             box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
